[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }